--- a/CS302_Fall2022/CS302_Fall2022/compile.cfg
+++ b/CS302_Fall2022/CS302_Fall2022/compile.cfg
@@ -88,3 +88,7 @@ Enabled=1
 Enabled=1
 [file:.\src\Comparator2.v]
 Enabled=1
+[file:.\src\Four_bits_incrementer.v]
+Enabled=1
+[file:.\src\half_adder.v]
+Enabled=1
